# soc-graph

./: .gitignore  README.md  pyproject.toml
data/demo/: apt_scenario.csv
docs/: IMPLEMENTATION_PLAN.md
notebooks/: 01_behavioral_detector_demo.ipynb  02_pipeline_demo.ipynb  03_cadets_e3_results.ipynb
scripts/: convert_cdm_to_csv.py  export_pidsmaker_pg.py  generate_cadets_results_notebook.py  generate_demo_notebook.py  run_baseline_experiment.py  run_gnn_experiment.py  run_saved_model_inference.py  train_behavioral_model.py  train_gnn_model.py
src/soc_graph/: __init__.py
src/soc_graph/api/: __init__.py  app.py
src/soc_graph/dashboard/: __init__.py  streamlit_app.py
src/soc_graph/data/: __init__.py  build_graph.py  dataset.py  parse_cdm.py  pidsmaker.py  pidsmaker_pg.py  pyg.py  schemas.py
src/soc_graph/detection/: __init__.py  evaluate.py  subgraph.py  threshold.py
src/soc_graph/model/: __init__.py  decoder.py  detector.py  encoder.py  gnn.py  gnn_inference.py  gnn_train.py  io.py  pipeline.py  runtime.py  state.py  train.py
src/soc_graph/report/: __init__.py  llm_report.py  mitre_mapping.py  serialize.py
tests/: test_build_graph.py  test_experiment_pipeline.py  test_graph_artifacts.py  test_model_io.py  test_pidsmaker.py  test_pidsmaker_loader.py  test_pidsmaker_pg.py  test_runtime.py  test_threshold.py  test_training_pipeline.py
tests/fixtures/: sample_pidsmaker.csv
